--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -4,6 +4,7 @@ server {
 
     location / {
 
+        proxy_pass http://myapp2:3000;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $http_host;
@@ -11,7 +12,6 @@ server {
         proxy_redirect off;
 
 
-        proxy_pass http://node-app:3000;
  
     }
 
