--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,10 +1,14 @@
+    upstream backend {
+    server node-app:3000;
+    }
 server {
+
     listen 80;
     server_name localhost;
 
     location / {
 
-        proxy_pass http://myapp2:3000;
+        proxy_pass http://backend;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $http_host;
