--- a/playbook-ansible.yml
+++ b/playbook-ansible.yml
@@ -2,23 +2,12 @@
 - name: "Build container with ansible"
   hosts: localhost
   tasks:
-    - name: stop running container
-      command: docker compose down
-      ignore_errors: yes
-
     - name: remove used image
       command: docker rmi redasaad123/docker-test
       ignore_errors: yes
 
-    - name: docker compose build
-      command: docker compose build
+    - name: build docker image from dockerfile
+      command: docker build -t docker-test .
 
-    - name: docker compose push
-      command: docker compose push 
-
-    - name: docker up
-      command: docker compose up -d
-
-
-
- 
+    - name: push image to dockerhub
+      command: docker push redasaad123/docker-test
